tests/if/class_in_else.lox
// error
if (true) "ok"; else class Foo {}
